--- a/public/golden temple/style.css
+++ b/public/golden temple/style.css
@@ -1577,3 +1577,702 @@ p0p up test x------>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<------------x
     cursor: pointer;
   }
   
+@media screen and (max-width:1024px){
+    .abcdefg{
+        widows: 100%;
+    }
+    
+    
+        #AB{
+            width: 100%;  
+          display: inline-block;
+          padding-bottom: 50px;
+    padding-left: 200px;
+        }
+        #AB .boxxts{
+            max-width: 70%;
+            padding: 50px 2px;
+            padding-bottom: 18px;
+            padding-top: 18px;
+        }
+    
+    
+    
+        #AB .boxxts:hover
+    {  
+        max-width: 72%;
+        padding: 50px 2px;
+        padding-bottom: 19px;
+        padding-top: 19px;
+       
+    }
+    #AB .boxxts .hs1{
+        font-size: 33px;
+        
+        text-decoration: underline;
+    text-align: center;
+    }
+    
+    
+    
+    #AB .boxxts .center1{
+        padding: 13px;
+    /* text-align: center; */
+    font-size: 20px;
+    }
+    
+     }
+     @media screen and (max-width:549px){
+        /* .abcdefg{
+            widows: 100%;
+        } */
+            #AB{
+    
+    
+    
+        padding-left: 0px;
+            }
+            #AB .boxxts{
+                max-width: 100%;
+                padding: 50px 2px;
+                padding-bottom: 0px; 
+               padding-top: 10px;
+            }
+        
+        
+        
+            #AB .boxxts:hover
+        {  
+            max-width: 100%;
+            padding: 46px 2px;
+            padding-bottom: 20px;
+            padding-top: 20px; 
+           
+        }
+        #AB .boxxts .hs1{
+            font-size: 19px;
+         font-weight: 800;
+        }
+        
+        
+        
+        #AB .boxxts .center1{
+            padding: 13px;
+        /* text-align: center; */
+        font-size: 20px;
+        }
+        #help {
+          
+            font-size: 18px;
+        }
+        #dont {
+            font-size: 30px;
+        }
+         }
+        
+@media only screen and(box:1104px)
+{
+    .nav-list
+    {
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 600px) {
+    body {
+      font-size: 16px;
+    }
+  
+    .form {
+      padding: 15px;
+      width: var(--form-mob-width);
+    }
+  
+    form div:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  
+    [type="checkbox"]:checked + .feedback-label {
+      transform: rotate(-90deg) translate(50%, calc((var(--form-mob-width) + 100%) * -1));
+      /*uncomment this if you want to reverse the order of the characters*/
+      /*transform: rotate(90deg) translate(50%, var(--form-mob-width));*/
+    }
+  }
+  
+ @media screen and (max-width:537px){
+    .services-container{
+        width: 100%;
+   
+    }
+    #services{
+        width: 100%;  
+      display: inline-block;
+      padding-bottom: 50px;
+      padding-top: 20px;
+    }
+    #services .box{
+        max-width: 100%;
+
+        padding: 45px 29px;
+    }
+
+
+
+    #services .box:hover
+{  
+    max-width: 100%; 
+    padding: 43px 29px;
+}
+ .center{
+    font-size: 18px;
+    font-weight: 500;
+
+}
+#srvs{
+    text-align:center;
+    font-size: 35px;
+    padding: 0px;
+}
+.service .h-primary center{
+    text-align:center;
+    font-size: 35px;
+}
+.hs{
+
+ font-size: 26px;
+ font-weight: 700;
+ 
+
+ }
+ 
+
+ }
+ 
+
+@media screen and (max-width:1024px){
+  
+
+    .Taj .about-section {
+        background-size: 80%;
+        padding: 97px 0px;
+        margin-top: 37px;
+        margin-right: 0px;
+        background-size: 532px 382px;
+    }
+    .Taj .about-section:hover{
+       
+        padding: 97px 0px;
+        margin-top: 37px;
+        margin-right: 0px;
+        background-size: 582px 400px;   
+    }
+        .Taj .about-section .inner-container {
+            width: 55%;
+            padding: 0 24px;
+            margin-right: 293px;
+        }
+        
+    .Taj .about-section2{
+       
+        padding: 97px 0px;
+        margin-top: 37px;
+        margin-right: 0px;
+        background-size: 532px 460px;
+    }
+    .Taj .about-section2:hover{
+         
+        padding: 97px 0px;
+        margin-top: 37px;
+        margin-right: 0px;
+        background-size: 600px 500px;   
+    }
+    .Taj  .about-section2  .inner-container{
+        width: 55%;
+            padding: 0 24px;
+            margin-right: 293px;
+
+    }
+    .Taj .inner-container h1 {
+        margin-bottom: 30px;
+        margin-top: 7px;
+        font-size: 30px;
+    }
+    
+    
+    .Taj .inner-container .tx1 {
+        font-size: 15px;
+        margin-bottom: 40px;
+    }
+    
+    .Taj .skills {
+        font-size: 15px;
+        padding-bottom: 20px;
+    }
+
+}
+
+@media screen and (max-width:500px){
+    .Taj .about-section {
+        background-size: 100% 75%;
+        padding: 97px 0px;
+        margin-top: 36px;
+        margin-right: 0px;
+   
+    }
+    .Taj .about-section:hover{
+       
+        padding: 97px 0px;
+        margin-top: 37px;
+        margin-right: 0px;
+        background-size: 582px 400px;   
+    }
+        .Taj .about-section .inner-container {
+            width: 96%;
+  
+            margin-right: 10px;
+        }
+        
+    .Taj .about-section2{
+       
+        background-size: 100% 75%;
+        padding: 97px 0px;
+        margin-top: 36px;
+        margin-right: 0px;
+    }
+    .Taj .about-section2:hover{
+         
+        padding: 97px 0px;
+        margin-top: 37px;
+        margin-right: 0px;
+        background-size: 582px 400px;   
+    }
+    .Taj  .about-section2  .inner-container{
+        width: 96%;
+  
+            margin-right: 10px;
+
+    }
+    .Taj .inner-container h1 {
+        margin-bottom: 30px;
+        margin-top: 7px;
+        font-size: 30px;
+    }
+    
+    
+    .Taj .inner-container .tx1 {
+        font-size: 12px;
+        line-height: 16px;
+    }
+    
+    .Taj .skills {
+        font-size: 15px;
+        padding-bottom: 20px;
+    
+    }
+    #why{
+
+        text-align: center;
+
+    }
+
+}
+
+
+@media screen and (max-width:1024px){
+    #des{
+        margin: 15px 45px;
+
+        font-size: 20px;
+ 
+    }
+    /* .Taj .about-section1{
+        background-size: 70%;
+        padding: 210px -1px;
+        margin-left: 300px;
+    }
+    .Taj .about-section1:hover{
+        background-size: 80%;
+        padding: 200px -1px;
+        margin-left: 300px;
+    }
+    .Taj  .about-section1  .inner-container1{
+        width: 70%;
+        padding: 8px 30px;
+
+    }
+    */
+    .Taj .about-section1 {
+        background-size: 70%;
+        padding: 97px 0px;
+        margin-top: 37px;
+        margin-left: 200px;
+        background-size: 532px 382px;
+    }
+    .Taj .about-section1:hover{
+       
+        padding: 97px 0px;
+        margin-top: 37px;
+        margin-left: 200px;
+        background-size: 582px 400px;   
+    }
+        .Taj .about-section1 .inner-container1 {
+            width: 75%;
+            padding: 0 24px;
+            margin-right: 55px;
+        } .Taj .about-section1 .inner-container1:hover {
+            width: 75%;
+            padding: 0 24px;
+            margin-right: 55px;
+        }
+    .Taj   .inner-container1 h1{
+        margin-bottom: 30px;
+        font-size: 30px;
+  
+    
+    }
+    
+  
+.Taj .about-section1 .inner-container1 .tx2 {
+        font-size: 25px;
+ 
+        margin-bottom: 40px;
+    }
+    
+    .Taj  .skills1{
+ 
+        
+        font-size: 20px;
+    }
+    h1{
+margin-top:5px;
+    }
+    /* .contact .box {
+        position: relative;
+        max-width: 65%;
+        min-height: 550px;
+        transition: all .5s;
+    } */
+}
+@media (max-width:549px){
+    #des{
+        margin: 15px 8px;
+    font-size: 14px;
+    font-weight: 700;
+ 
+    }
+
+
+
+
+
+    .Taj .about-section1 {
+        padding: 0px;
+        margin-top: 37px;
+        margin-left: 0px;
+        background-size: 150% 100%;
+    }
+    .Taj .about-section1:hover{
+       
+        padding: 0px;
+        margin-top: 37px;
+        margin-left: 0px;
+        background-size: 160% 120%;  
+    }
+        .Taj .about-section1 .inner-container1 {
+            width: 89%;
+            padding: 0 24px;
+            margin-right: 20px;
+            margin-top: 15px;
+            margin-bottom: 15px;
+        } .Taj .about-section1 .inner-container1:hover {
+            width: 89%;
+            padding: 0 24px;
+            margin-right: 20px;
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
+    .Taj   .inner-container1 h1{
+        margin-bottom: 30px;
+        font-size: 30px;
+  
+    
+    }
+    
+   
+.Taj .about-section1 .inner-container1 .tx2 {
+        font-size: 14px;
+        color: #545454;
+        line-height: 15px;
+        text-align: justify;
+        font-weight: 700;
+        margin-bottom: 32px;
+    }
+    
+    .Taj  .skills1{
+ 
+        
+        font-size: 20px;
+    }
+
+
+
+
+
+}
+
+/* responsive media query start */
+@media (max-width: 1300px) {
+    .home .box{
+        margin-left: 0px;
+    }
+}
+
+@media (max-width: 1104px) {
+    .about .about-content .left img{
+        height: 350px;
+        width: 350px;
+    }
+}
+
+@media (max-width: 991px) {
+    .box{
+        padding: 0 50px;
+    }
+}
+@media (max-width: 947px){
+    .nav-list-btn{
+        display: block;
+        z-index: 999;
+    }
+    .nav-list-btn i.active:before{
+        content: "\f00d";
+    }
+    .navbar .nav-list{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: #111;
+        text-align: center;
+       
+        padding-top: 50px;
+        transition: all 0.3s ease;
+    }
+    .navbar .nav-list.active{
+        left: 0;
+    }
+    .navbar .nav-list li{
+        display: block;
+    }
+    .navbar .nav-list li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+    .home .hc .text-2{
+        font-size: 70px;
+    }
+    .home .hc .text-3{
+        font-size: 35px;
+    }
+    .home .hc a{
+        font-size: 23px;
+        padding: 10px 30px;
+    }
+    .box{
+        max-width: 930px;
+    }
+    .about .about-content .column{
+        width: 100%;
+    }
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 60px;
+    }
+    .about .about-content .right{
+        flex: 100%;
+    }
+    .services .serv-content .card{
+        width: calc(50% - 10px);
+        margin-bottom: 20px;
+    }
+    .skills .skills-content .column,
+    .contact .contact-content .column{
+        width: 100%;
+        margin-bottom: 35px;
+    }
+}
+
+@media (max-width: 690px) {
+    .box{
+        padding: 0 23px;
+    }
+    .home .hc .text-2{
+        font-size: 60px;
+    }
+    .home .hc .text-3{
+        font-size: 32px;
+    }
+    .home .hc a{
+        font-size: 20px;
+    }
+    .services .serv-content .card{
+        width: 100%;
+    }
+}
+
+@media(max-width:1024px){
+    .contact .box {
+    
+        max-width: 100%;
+  
+    }
+    .contact .box:hover{
+
+        max-width: 100%;
+
+    }
+ 
+    .about, .service, .feedback, .contact, footer {
+        
+        padding: 35px;
+    }
+    .about, .service, .feedback, .contact, footer:hover {
+        
+        padding: 35px;
+    }
+    
+    
+}
+@media (max-width: 500px) {
+    .contact .box {
+    
+        max-width: 100%;
+  
+    }
+    .contact .box:hover{
+
+        max-width: 100%;
+
+    }
+    section .title {
+        font-size: 35px;
+        font-weight: 700;
+    }
+    .about, .service, .feedback, .contact, footer {
+        padding: 70px 25px;
+    }
+
+
+    .home .hc .text-2{
+        font-size: 50px;
+    }
+    .home .hc .text-3{
+        font-size: 27px;
+    }
+    .about .about-content .right .text,
+    .skills .skills-content .left .text{
+        font-size: 19px;
+    }
+    .contact .right form .fields{
+        flex-direction: column;
+    }
+    .contact .right form .name,
+    .contact .right form .email{
+        margin: 0;
+    }
+    .scroll-up-btn{
+        right: 15px;
+        bottom: 15px;
+        height: 38px;
+        width: 35px;
+        font-size: 23px;
+        line-height: 38px;
+    }
+}
+/* about */
+@media screen and (max-width:1200px){
+    .inner-container{
+        padding: 80px;
+    }
+}
+
+@media screen and (max-width:1000px){
+    .about-section{
+        background-size: 100%;
+        padding: 100px 40px;
+    }
+    .inner-container{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:600px){
+    .about-section{
+     
+        background-size: 100% 100%;
+        padding: 26px 26px;
+transition: .4s ease-in-out;
+
+    }
+    .inner-container{
+        padding: 20px;
+font-weight: 700;
+transition: .4s ease-in-out;
+
+    }
+    /* .inner-container:hover{
+        padding: 20px;
+font-weight: 700;
+    } */
+    .tx1 {
+        font-size: 14px;
+        color: #545454;
+        line-height: 22px;
+        margin-bottom: 40px;
+        font-weight: 600;
+
+    }
+    #sp{
+        font-size: 14px;
+    }
+
+}
+
+/* our servies */
+@media screen and (max-width:1200px){
+    .inner-container:hover{
+        padding: 80px;
+        
+    }
+}
+
+@media screen and (max-width:1000px){
+    .about-section:hover{
+        background-size: 100%;
+        padding: 100px 40px;
+    }
+    .inner-container:hover{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:600px){
+    .about-section:hover{
+     
+        background-size: 100% 100%;
+        padding: 26px 26px;
+transition: .4s ease-in-out;
+
+    }
+    .inner-container:hover{
+        /* padding: 60px; */
+        padding: 20px;
+        font-weight: 700;
+transition: .4s ease-in-out;
+
+}
+
+
+}
