--- a/templates/views/taj1.hbs
+++ b/templates/views/taj1.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taj Mahal</title>
     {{!-- <link rel="stylesheet" href="/tsongmo lake/style.css"> --}}
-    <link rel="stylesheet" href="/Taj/style.css">
+    <link rel="stylesheet" href="/TAJ/style.css">
 
     <link rel="shortcut icon" href="/css and js/data photos/13.png" type="image/x-icon">
 
@@ -425,7 +425,8 @@
         });
             return false;
         });
-        $('a[href="#ex3"]').click(function () {
+ 
+       $('a[href="#ex3"]').click(function () {
             
             
             $(this).modal({
