--- a/templates/views/index1.hbs
+++ b/templates/views/index1.hbs
@@ -273,14 +273,14 @@
         <div class="inner-container">
             <h1>About Us</h1>
             <p class="tx1">
-                We are student of J.C.Bose UST , Faridabad , Haryana Btech Computer Engineering 2nd year 3rd semester class : CE32  , Sourabh Dhalia and Shivkrishan .
-                we learn Frontend and Backend Both in Web Development and this site is our Porject.
-                We have learned HTML, Handlebars, CSS, JAVA Sript,NodeJS ,MongoDB etc in our journey </p>
+                I am student of J.C.Bose UST , Faridabad , Haryana Btech Computer Engineering 2nd year 3rd semester class : CE32  , Sourabh Dhalia .
+                I learn Frontend and Backend Both in Web Development and this site is our Porject.
+                I have learned HTML, Handlebars, CSS, JAVA Sript,NodeJS ,MongoDB etc in our journey </p>
             <div class="skills">
                
                 
                 
-                <p class="sp" style="font-size: 14px; text-align: center;;"> | Sourabh Dhaia and Shivkrishan | Minor Porject | 19001003127 and 19001003123 |  CE32</p>
+                <p class="sp" style="font-size: 14px; text-align: center;;"> | Sourabh Dhaia  | Minor Porject | 19001003127 |  CE32</p>
                
 
                 
@@ -310,7 +310,7 @@ Get in Touch</div>
                             <div class="head">
 Name</div>
 <div class="sub-title">
-Sourabh Dhalia && Shivkrishan</div>
+Sourabh Dhalia </div>
 </div>
 </div>
 <div class="row">
@@ -393,7 +393,7 @@ Message me</div>
 
 
         <footer>
-            <span>Created By <a href="#home">Sourabh Dhalia && Shivkrishan</a> |  <span class="far fa-copyright"> | www.trevl.com |</span> 2020 All rights reserved.</span>
+            <span>Created By <a href="#home">Sourabh Dhalia</a> |  <span class="far fa-copyright"> | www.trevl.com |</span> 2020 All rights reserved.</span>
         </footer>
     <script src="css and js/home js/script.js"></script>
 </body>
