--- a/templates/views/morenext1.hbs
+++ b/templates/views/morenext1.hbs
@@ -29,13 +29,40 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   
   <style>
-          .modal{
+                .modal{
               max-width: 969px;
           box-sizing: border-box;
           width: 100%;
           transition: all .4s ease-in-out;
           };
 
+@media (max-width:1025px)
+{
+          .modal{
+          
+          width: 100%;
+          };
+}
+@media (max-width:375px)
+{        .modal{
+            width: 100%;
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          .modal .mb-40 iframe{
+          
+      
+                       position: relative;
+                width: 50%;
+                height: 50%;
+               
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          
+}
 
       </style>
 
@@ -145,7 +172,7 @@
     </section>
 
     <section class="Taj" >
-    <div class="about-section3" >
+    <div class="about-section" >
         <div class="inner-container">
             <h1>Golden Temple</h1>
             <p class="tx1">
@@ -158,8 +185,8 @@
             </div>
         </div>
     </div>
-    <div class="about-section4"  >
-        <div class="inner-container">
+    <div class="about-section1"  >
+        <div class="inner-container1">
             <h1>Hampi</h1>
             <p class="tx1">
                 Hampi or Hampe, also referred to as the Group of Monuments at Hampi, is a UNESCO World Heritage Site located in east-central Karnataka, India.[2] It is a pilgrimage centre of the Hindu religion.    </p>
@@ -172,7 +199,7 @@
             </div>
         </div>
     </div>
-    <div class="about-section5" >
+    <div class="about-section2" >
         <div class="inner-container">
             <h1>Humayun Tomb
             </h1>
@@ -195,7 +222,7 @@
 <aside><a href="/more" style="color: Gold; border:0px;" class="bt2">Back</a></aside>
 
       <footer>
-        <span>Created By <a href="#home">Sourabh Dhalia && ShivKrishn</a> | <span class="far fa-copyright"> |
+        <span>Created By <a href="#home">Sourabh Dhalia</a> | <span class="far fa-copyright"> |
                 www.trevl.com |</span> 2020 All rights reserved.</span>
     </footer>
     <script src="css and js/home js/script.js"></script>
