--- a/templates/views/morenext2.hbs
+++ b/templates/views/morenext2.hbs
@@ -33,13 +33,40 @@
           margin-bottom: 10px;
           padding-bottom: 10px;
       }
-          .modal{
+                .modal{
               max-width: 969px;
           box-sizing: border-box;
           width: 100%;
           transition: all .4s ease-in-out;
           };
 
+@media (max-width:1025px)
+{
+          .modal{
+          
+          width: 100%;
+          };
+}
+@media (max-width:375px)
+{        .modal{
+            width: 100%;
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          .modal .mb-40 iframe{
+          
+      
+                       position: relative;
+                width: 50%;
+                height: 50%;
+               
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          
+}
 
       </style>
 
@@ -150,7 +177,7 @@
 
 
     <section class="Taj" >
-         <div class="about-section6"  >
+         <div class="about-section"  >
         <div class="inner-container">
             <h1>khajuraho</h1>
             <p class="tx1">
@@ -166,8 +193,8 @@
         </div>
     </div>
 
-    <div class="about-section7" >
-        <div class="inner-container">
+    <div class="about-section1" >
+        <div class="inner-container1">
             <h1>Nanda Devi</h1>
             <p class="tx1">
                  Nanda Devi is the second highest mountain in India after Kangchenjunga and the highest located entirely within the country. It is the 23rd-highest peak in the world. It was considered the highest mountain in the world before computations in 1808 proved Dhaulagiri to be higher. </p>
@@ -179,7 +206,7 @@
             </div>
         </div>
     </div>
-    <div class="about-section8"  >
+    <div class="about-section2"  >
         <div class="inner-container">
             <h1>Padmanabhaswamy Temple</h1>
             <p class="tx1">
@@ -202,7 +229,7 @@
 <aside>  <a href="/morenext1" style="color: Gold; border:0px;" class="bt2">Back</a>
 </aside>
       <footer>
-        <span>Created By <a href="#home">Sourabh Dhalia && ShivKrishn</a> | <span class="far fa-copyright"> |
+        <span>Created By <a href="#home">Sourabh Dhalia</a> | <span class="far fa-copyright"> |
                 www.trevl.com |</span> 2020 All rights reserved.</span>
     </footer>
     <script src="css and js/home js/script.js"></script>
