--- a/templates/views/morenext3.hbs
+++ b/templates/views/morenext3.hbs
@@ -33,13 +33,40 @@
           margin-bottom: 10px;
           padding-bottom: 10px;
       }
-          .modal{
+                .modal{
               max-width: 969px;
           box-sizing: border-box;
           width: 100%;
           transition: all .4s ease-in-out;
           };
 
+@media (max-width:1025px)
+{
+          .modal{
+          
+          width: 100%;
+          };
+}
+@media (max-width:375px)
+{        .modal{
+            width: 100%;
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          .modal .mb-40 iframe{
+          
+      
+                       position: relative;
+                width: 50%;
+                height: 50%;
+               
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          
+}
 
       </style>
 
@@ -151,7 +178,7 @@
 
     <section class="Taj" >
    
-       <div class="about-section9" >
+       <div class="about-section" >
         <div class="inner-container">
             <h1>Amer Fort
             </h1>
@@ -172,7 +199,7 @@
 <aside><a href="morenext2" style="color: Gold; border:0px;" class="bt2">Back</a></aside>
 
       <footer>
-        <span>Created By <a href="#home">Sourabh Dhalia && ShivKrishn</a> | <span class="far fa-copyright"> |
+        <span>Created By <a href="#home">Sourabh Dhalia</a> | <span class="far fa-copyright"> |
                 www.trevl.com |</span> 2020 All rights reserved.</span>
     </footer>
     <script src="css and js/home js/script.js"></script>
