--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -80,7 +80,7 @@
 
         </div>
       </footer> -->   <footer>
-            <span>Created By <a href="/">Sourabh Dhalia && ShivKrishn</a> |  <span >copyright &copy | www.trevl.com |</span> 2020 All rights reserved.</span>
+            <span>Created By <a href="/">Sourabh Dhalia</a> |  <span >copyright &copy | www.trevl.com |</span> 2020 All rights reserved.</span>
         </footer>
 <script src="css and js/login js/effect.js">
 	
