--- a/templates/views/taj1.hbs
+++ b/templates/views/taj1.hbs
@@ -33,13 +33,40 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
   
   <style>
-          .modal{
+                .modal{
               max-width: 969px;
           box-sizing: border-box;
           width: 100%;
           transition: all .4s ease-in-out;
           };
 
+@media (max-width:1025px)
+{
+          .modal{
+          
+          width: 100%;
+          };
+}
+@media (max-width:375px)
+{        .modal{
+            width: 100%;
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          .modal .mb-40 iframe{
+          
+      
+                       position: relative;
+                width: 50%;
+                height: 50%;
+               
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          
+}
 
       </style>
 </head>
@@ -309,18 +336,17 @@
         <div class="inner-container">
             <h1 id="abthp">About Us</h1>
             <p class="tx1">
-                We are student of J.C.Bose UST , Faridabad , Haryana Btech Computer Engineering 2nd year 3rd semester class : CE32  , Sourabh Dhalia and Shivkrishan .
-                we learn Frontend and Backend Both in Web Development and this site is our Porject.
-                We have learned HTML, Handlebars, CSS, JAVA Sript,NodeJS ,MongoDB etc in our journey 
-  
-            </p>
+             I am student of J.C.Bose UST , Faridabad , Haryana Btech Computer Engineering 2nd year 3rd semester class : CE32  , Sourabh Dhalia .
+                I learn Frontend and Backend Both in Web Development and this site is our Porject.
+                I have learned HTML, Handlebars, CSS, JAVA Sript,NodeJS ,MongoDB etc in our journey 
+                  </p>
             <div class="skills">
 
 
 
-                <span class="sp"> | Sourabh Dhaia and ShivKrishn |</span>
+                <span class="sp"> | Sourabh Dhaia  |</span>
                 <span class="sp">Minor Porject</span>
-                <span class="sp">| 19001003127 and 19001003123 |</span>
+                <span class="sp">| 19001003127 |</span>
                 <span class="sp">CE32</span>
 
             </div>
@@ -348,7 +374,7 @@
                                 <div class="head">
                                     Name</div>
                                 <div class="sub-title">
-                                    Sourabh Dhalia && ShivKrishn</div>
+                                    Sourabh Dhalia</div>
                             </div>
                         </div>
                         <div class="row">
@@ -400,7 +426,7 @@
     </section>
    
     <footer>
-        <span>Created By <a href="#home">Sourabh Dhalia && ShivKrishn</a> | <span class="far fa-copyright"> |
+        <span>Created By <a href="#home">Sourabh Dhalia</a> | <span class="far fa-copyright"> |
                 www.trevl.com |</span> 2020 All rights reserved.</span>
     </footer>
     <script src="/css and js/data js/script.js"></script>
