--- a/public/amerfort/style.css
+++ b/public/amerfort/style.css
@@ -788,7 +788,7 @@ transition: all .2s ease-in-out;
 
 
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:1080px){
   
     .contact .box {
         position: relative;
@@ -1046,7 +1046,7 @@ margin-top:5px;
 
 
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:1080px){
     .services-container{
         width: 100%;
    
@@ -1484,7 +1484,7 @@ transition: .4s ease-in-out;
       
    transition: .3s ease-in-out;}
 
-   @media screen and (max-width:1024px){
+   @media screen and (max-width:1080px){
     .abcdefg{
         widows: 100%;
     }
@@ -1720,11 +1720,12 @@ ul.hhh {
 
 
 #map{
-display:inline-flex;
+display:block;
     margin-left: 100px;
 
 }
 #map .y{
+            
 margin-left: 120px;
 /* box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459); */
 
@@ -1752,8 +1753,47 @@ box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151,
         transition: .4s;
 
             }
+            @media screen and (max-width:2246px){
+    
 
-@media (max-width:1025px)
+
+                #map{
+                    display:inline-flex;
+                        margin-left: 100px;
+                    
+                    }
+                    #map .y{
+                                
+                    margin-left: 120px;
+                    /* box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459); */
+                    
+                    transition: .4s;
+                    
+                    }
+                    #map .y:hover{
+                    
+                    
+                        margin-top: 70px;
+                        
+                    box-shadow: 0 30px 40px rgba(19, 146, 219, 0.479), 0 30px 20px rgba(149, 47, 231, 0.459);
+                    
+                    transition: .4s;
+                        }
+                        #map  .m{
+                         transition: .4s;
+                     
+                            }
+                            #map  .m:hover{
+                    margin-top: 70px;
+                            margin-left: 300px;
+                    box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459);
+                           
+                            transition: .4s;
+                    
+                                }
+                    
+                }
+@media (max-width:1080px)
             {
                 #map{
                     display:block;
@@ -1843,6 +1883,8 @@ box-shadow: 0 30px 40px rgba(19, 146, 219, 0.479), 0 30px 20px rgba(149, 47, 231
              }
            
 }
+
+
 
 /* 
 
