--- a/templates/views/morenext3.hbs
+++ b/templates/views/morenext3.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css and js/home css/response.css">
+    <link rel="stylesheet" href="/css and js/home css/morenext.3.css">
     <link rel="shortcut icon" href="/css and js/data photos/13.png" type="image/x-icon">
 
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
