--- a/templates/views/register.hbs
+++ b/templates/views/register.hbs
@@ -6,6 +6,8 @@
     <title>signUp on TRAVL.com</title>
 	<link rel="shortcut icon" href="css and js/login img/13.png" type="image/x-icon">
 	<link rel="stylesheet" href="css and js/login css/style.css">
+   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="app.js"></script>
 {{!-- <meta name="google-signin-client_id" content="810815498953-0vdj4up0bmd2rao9sfjcof3cvgjatrcr.apps.googleusercontent.com"> --}}
