--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -220,7 +220,7 @@
         </div>
     </div>
     
-    <button class="bt2" onclick="popup()" style="border: 0px;"> <a href="#" class="bt2" style="text-align: center;">READ MORE</a>  </button>
+    <button class="bt2" onclick="popup()" style="border: 0px;"> <a href="/" class="bt2" style="text-align: center;">READ MORE</a>  </button>
 <script>
     function popup(){
       swal("Please !!!", "Login for more awesome place", "warning")
