--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -376,15 +376,15 @@ Message me</div>
 <form class="form" action="https://formspree.io/f/mknpprkj" method="POST" accept-charset="UTF-8">
   <div>
     <label for="fullname">Full Name</label>
-    <input type="text" name="name2" id="fullname">
+    <input type="text" name="name2" id="fullname" required>
   </div>
   <div>
     <label for="email">Email</label>
-    <input type="email" name="email2" id="email">
+    <input type="email" name="email2" id="email" required>
   </div>
   <div>
     <label for="comment">Comment</label>
-    <textarea id="comment" name="comment"></textarea>
+    <textarea id="comment" name="comment" required></textarea>
   </div>
   <div>
     <button type="submit">Send</button>
