--- a/templates/views/amer.hbs
+++ b/templates/views/amer.hbs
@@ -47,7 +47,7 @@
           width: 100%;
           };
 }
-@media (max-width:500px)
+@media (max-width:375px)
 {        .modal{
             width: 100%;
     background: none;
@@ -67,6 +67,34 @@
           };
           
 }
+@media (max-width:1025px)
+{
+          .modal{
+          
+          width: 100%;
+          };
+}
+@media (max-width:375px)
+{        .modal{
+            width: 100%;
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          .modal .mb-40 iframe{
+          
+      
+                       position: relative;
+                width: 50%;
+                height: 50%;
+               
+    background: none;
+    height: fit-content;
+    color: whitesmoke;
+          };
+          
+}
+
       </style>
 </head>
 
@@ -107,7 +135,7 @@
                 <li><a href="#about" class="nav-list-btn">About</a></li>
                 <li><a href="#contact" class="nav-list-btn">Contact us</a></li>
                 <!-- <li><a href="login page/1stpage.html" class="nav-list-btn">Login</a></li>
-            </ul> -->
+       -->     </ul> 
 
                 <div class="nav-list-btn">
                     <i class="fas fa-bars"></i>
