--- a/public/amerfort/style.css
+++ b/public/amerfort/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     font-family: "Open Sans",sans-serif;
 }
+/* amerFort */
 /*  import google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 /* .navbar
@@ -777,17 +778,51 @@ transition: all .2s ease-in-out;
     padding: 54px;
     transition: all .4s ease-in-out;
 
-   
 }
 .inner-containerr h1{
     margin-bottom: 30px;
     font-size: 30px;
     font-weight: 900;
 }
+@media screen and (max-width:946px){
+    .services-container{
+        width: 100%;
+   
+    }
+    #services{
+        width: 100%;  
+      display: inline-block;
+      padding-bottom: 50px;
+    }
+    #services .box{
+        max-width: 80%; 
+       padding: 46px 30px;
+       
+    }
 
 
+    #services .box:hover
+{  
+    max-width: 80%; 
+   
+}
+ .center{
+    text-align: center;
+    font-size: 100%;
 
+}
+.hs{
+    float: center;
+    padding: 5% 10%;
+ text-align: center;
+ padding-bottom: 10px;
+ font-size: 100%;
+ 
 
+ }
+ 
+
+}
 @media screen and (max-width:1080px){
   
     .contact .box {
@@ -1172,13 +1207,6 @@ margin-top:5px;
 
 
 
-
-
-
-
-
-
-
 .bt2{
    
     margin: 11px;
@@ -1216,7 +1244,6 @@ footer span a{
 footer span a:hover{
     text-decoration: underline;
 }
-
 
 /* responsive media query start */
 @media (max-width: 1300px) {
@@ -1433,7 +1460,7 @@ transition: .4s ease-in-out;
 
 
 }
-
+/* 
 
 #nxt{
     text-align: right;
@@ -1482,7 +1509,7 @@ transition: .4s ease-in-out;
        position: relative;
        
       
-   transition: .3s ease-in-out;}
+   transition: .3s ease-in-out;} */
 
    @media screen and (max-width:1080px){
     .abcdefg{
@@ -1572,228 +1599,135 @@ transition: .4s ease-in-out;
         #dont {
             font-size: 30px;
         }
-         }
-        
-        
-   .submenu{
-         display: none;
-         ;
-   }
+         }  
+          /* map and youtube video responsive media query start */
+         .submenu{
+      display: none;
+      ;
+}
 
-   .nav-list li .submenu li a{
-       color:blue;
-       text-decoration: none;
-   }
-   .nav-list li .submenu li a:hover{
+.nav-list li .submenu li a{
     color:blue;
     text-decoration: none;
 }
+.nav-list li .submenu li a:hover{
+ color:blue;
+ text-decoration: none;
+}
 
-   .nav-list li:hover .submenu{
-       display: block;
-    position: absolute;
- 
-   }
-   .nav-list li:hover .submenu ul li{
-       display: block;
-       padding: 5px;
-       color: black;
-       
-    }
+.nav-list li:hover .submenu{
+    display: block;
+ position: absolute;
+
+}
+.nav-list li:hover .submenu ul li{
+    display: block;
+    padding: 5px;
+    color: black;
     
-/* taj alternate */
-
-
-  #abthp1{
-      font-family: cursive;
-  }
-
-
-  .about-section1{
-    background: url(bgg5.jpg.jpeg) no-repeat left;
-    background-size: 50%;
-
-    background-color: #fdfdfd;
-    overflow: hidden;
-    padding: 170px 0;
-
-}
-.about-section1:hover{
-    background: url(bgg5.jpg.jpeg) no-repeat left;
-    background-size: 50%;
-
-      background-color: #fdfdfd;
-    overflow: hidden;
-    padding: 170px 0;
- 
-    
-}
-
-.inner-container1{
-    width: 55%;
-    padding: 43px;
-    position: relative;
-    padding-left: 100px;
-    background-color: #fdfdfd;
-    transition: all .4s ease-in-out;
-    left: 410px
-}
-.inner-container1:hover{
-    
-    width: 55%;
-    position: relative;
-    padding: 43px;
-    background-color: rgba(255, 255, 255, 0.308);
-    border-radius: 23px;
-       
- 
-    box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459);
- 
-    background-color: #fdfdfd;
-    left: 415px;
-    transition : all .4s ease-in-out;
-   
-}
-
-.inner-container1 h1{
-    margin-bottom: 30px;
-    font-size: 30px;
-    font-weight: 900;
-}
-
-.tx11{
-    font-size: 10px;
-    color: #545454;
-    line-height: 30px;
-    text-align: justify;
-    margin-bottom: 40px;
-}
-
-.skills1{
-    display: flex;
-    justify-content: space-between;
-    font-weight: 750;
-    font-size: 14px;
-}
-
-
-.hhh{
-    margin-left: 300px;
-    font-size: 1.2rem;
-    margin-right: 300px;
-    margin-top: 10px;
-    text-align: justify;
-    line-height: 30px;
-
-
-    
-}
-ul.hhh {
-    list-style-type: none;
-}
-
-.wiki{
-    margin-left: 80% ;
-    color: red;
-    font-size: 1.3rem;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-.wikii{
-    margin-left: 80% ;
-    color: blue;
-    font-size: 1.1rem;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
+ }
+        
+  /*here is add note 2 if anything got wrong*/
+/* map and youtube video responsive media query start */
 
 
 
 
-
-
-
-
-
-
-
-
-
-#map{
-display:block;
-    margin-left: 100px;
-
-}
-#map .y{
-            
-margin-left: 120px;
-/* box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459); */
-
-transition: .4s;
-
-}
-#map .y:hover{
-
-
-    margin-top: 70px;
-    
-box-shadow: 0 30px 40px rgba(19, 146, 219, 0.479), 0 30px 20px rgba(149, 47, 231, 0.459);
-
-transition: .4s;
-    }
-    #map  .m{
-     transition: .4s;
- 
+@media screen and (max-width:2246px){
+    #map{
+        display:inline-flex;
+            margin-left: 100px;
+        
         }
-        #map  .m:hover{
-margin-top: 70px;
-        margin-left: 300px;
-box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459);
-       
+        #map .y{
+                    
+        margin-left: 120px;
+        /* box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459); */
+        
+        transition: .4s;       
+        }
+        #map .y:hover{
+        
+        
+            margin-top: 70px;
+            
+        box-shadow: 0 30px 40px rgba(19, 146, 219, 0.479), 0 30px 20px rgba(149, 47, 231, 0.459);
+        
         transition: .4s;
-
             }
-            @media screen and (max-width:2246px){
-    
-
-
+            #map  .m{
+             transition: .4s;
+         
+                }
+                #map  .m:hover{
+        margin-top: 70px;
+                margin-left: 300px;
+        box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459);
+               
+                transition: .4s;
+        
+                    }
+        
+        }  
+  @media screen and  (max-width:1828px){
+       
                 #map{
                     display:inline-flex;
-                        margin-left: 100px;
+        align-items: center;
                     
-                    }
+                    } 
                     #map .y{
-                                
-                    margin-left: 120px;
-                    /* box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459); */
+                        margin-left: 61px;
+                        margin-top: 0px;
                     
-                    transition: .4s;
-                    
-                    }
-                    #map .y:hover{
-                    
-                    
-                        margin-top: 70px;
-                        
-                    box-shadow: 0 30px 40px rgba(19, 146, 219, 0.479), 0 30px 20px rgba(149, 47, 231, 0.459);
-                    
-                    transition: .4s;
+                        /* box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459); */                        
+                        transition: .4s;                       
                         }
-                        #map  .m{
-                         transition: .4s;
-                     
+                        #map .y:hover{
+             margin-top: 62px;
                             }
-                            #map  .m:hover{
-                    margin-top: 70px;
-                            margin-left: 300px;
-                    box-shadow: 0 25px 34px rgba(46, 93, 121, 0.479), 0 25px 15px rgba(113, 67, 151, 0.459);
-                           
-                            transition: .4s;
-                    
+                            #map.m{
+                                 margin-left: 0px;
+                        margin-top: 50px;
                                 }
-                    
-                }
-@media (max-width:1080px)
+                                #map  .m:hover{
+                        margin-top: 62px;
+                  
+                                margin-left: 30px;
+box-shadow: 0 30px 40px rgba(19, 146, 219, 0.479), 0 30px 20px rgba(149, 47, 231, 0.459);
+                                
+                     
+                        
+                                    }
+                                    iframe{
+                                        height: 450px;
+                                        width: 650px;
+                                        /* padding: 100px; */
+                                        /* padding-left: 10px; */
+                                        
+                                    }
+  
+                                }
+  @media screen and  (max-width:1464px){
+    #map .y:hover{
+        margin-left: 61px;
+        margin-top: 0px;}
+ iframe{
+      height: 350px;
+      width: 550px;
+      /* padding: 100px; */
+      /* padding-left: 10px; */
+      
+  }
+               
+}
+  @media screen and  (max-width:1280px){
+       iframe{
+        height: 250px;
+        width: 450px;
+    }
+  }
+  @media (max-width:1080px)
             {
                 #map{
                     display:block;
@@ -1883,9 +1817,101 @@ box-shadow: 0 30px 40px rgba(19, 146, 219, 0.479), 0 30px 20px rgba(149, 47, 231
              }
            
 }
-
-
-
+ ::selection{
+    color: #fff;
+    background: #664AFF;
+  }
+  
+  .wrapper{
+    height: 35px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    width:250px ; 
+    outline: none;
+ 
+    
+    transition: 0.3s ease;  
+  }
+  .wrapper:hover{
+    height: 40px;
+    padding: 20px ;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    width:300px ; 
+    border: solid rgb(255, 255, 255) .1px;
+    background: none;
+    transition: 0.4s ease; 
+    color:gold; 
+}
+  
+  .wrapper .search-input{
+    background: rgb(49, 43, 43);
+    width: 100%;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.12);
+  }
+  
+  .search-input input{
+    height: 55px;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 0 60px 0 20px;
+    font-size: 18px;
+    box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
+  }
+  
+  .search-input.active input{
+    border-radius: 5px 5px 0 0;
+  }
+  
+  .search-input .autocom-box{
+    padding: 0;
+    opacity: 0;
+    pointer-events: none;
+    max-height: 280px;
+    overflow-y: auto;
+  }
+  
+  .search-input.active .autocom-box{
+    padding: 10px 8px;
+    opacity: 1;
+    pointer-events: auto;
+  }
+  
+  .autocom-box li{
+    list-style: none;
+    padding: 8px 12px;
+    display: none;
+    width: 100%;
+    cursor: default;
+    border-radius: 3px;
+  }
+  
+  .search-input.active .autocom-box li{
+    display: block;
+  }
+  .autocom-box li:hover{
+    background: #6e6262;
+  }
+  
+  .search-input .icon{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    height: 55px;
+    width: 55px;
+    text-align: center;
+    line-height: 55px;
+    font-size: 20px;
+    color: black;
+    cursor: pointer;
+  }
+    
 /* 
 
 p0p up test x------>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<------------x
@@ -2086,99 +2112,3 @@ p0p up test x------>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<------------x
     to {opacity:1 ;}
   }
  */
-
- ::selection{
-    color: #fff;
-    background: #664AFF;
-  }
-  
-  .wrapper{
-    height: 35px;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    width:250px ; 
-    outline: none;
- 
-    
-    transition: 0.3s ease;  
-  }
-  .wrapper:hover{
-    height: 40px;
-    padding: 20px ;
-    border: none;
-    border-radius: 10px;
-    outline: none;
-    width:300px ; 
-    border: solid rgb(255, 255, 255) .1px;
-    background: none;
-    transition: 0.4s ease; 
-    color:gold; 
-}
-  
-  .wrapper .search-input{
-    background: rgb(49, 43, 43);
-    width: 100%;
-    border-radius: 5px;
-    position: relative;
-    box-shadow: 0px 1px 5px 3px rgba(0,0,0,0.12);
-  }
-  
-  .search-input input{
-    height: 55px;
-    width: 100%;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    padding: 0 60px 0 20px;
-    font-size: 18px;
-    box-shadow: 0px 1px 5px rgba(0,0,0,0.1);
-  }
-  
-  .search-input.active input{
-    border-radius: 5px 5px 0 0;
-  }
-  
-  .search-input .autocom-box{
-    padding: 0;
-    opacity: 0;
-    pointer-events: none;
-    max-height: 280px;
-    overflow-y: auto;
-  }
-  
-  .search-input.active .autocom-box{
-    padding: 10px 8px;
-    opacity: 1;
-    pointer-events: auto;
-  }
-  
-  .autocom-box li{
-    list-style: none;
-    padding: 8px 12px;
-    display: none;
-    width: 100%;
-    cursor: default;
-    border-radius: 3px;
-  }
-  
-  .search-input.active .autocom-box li{
-    display: block;
-  }
-  .autocom-box li:hover{
-    background: #6e6262;
-  }
-  
-  .search-input .icon{
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    height: 55px;
-    width: 55px;
-    text-align: center;
-    line-height: 55px;
-    font-size: 20px;
-    color: black;
-    cursor: pointer;
-  }
-  
